--- a/theory.tex
+++ b/theory.tex
@@ -431,7 +431,6 @@ Whenever the wave vector $\KK$ is nearly perpendicular to the isofrequency conto
 \section{Electrodynamics of nonlocal homogeneous media} 
 \subsection{Nonlocal response} 
 \paragraph{Definition of nonlocal media}%{{{
-%TODO: spatial dispersion describes one specific sort of nonlocal behaviour that exists in homogeneous infinite media only
 The previous two chapters that concerned local media can be generalized into the theory of \textit{nonlocal} (or, \textit{spatially dispersive}) media.  The downside of the spatial-dispersive model of media is that it is more complicated, leading e.g. to an implicit dispersion equation. Its great advantage is however that it provides a necessary level of generality for the description of periodic structures discussed below. 
 Some phenomena observed in the frequency spectrum are in fact consequences of the spatial dispersion \cite[p. 359]{landau1984electrodynamics}, which is the case, for example, of the Doppler broadening of resonance lines in gases \cite{makarov2004permittivity}. 
 These phenomena are primarily dependent on the wave vector $\kk$, and the apparent broadening on the \textit{frequency} axis is only due to the dispersion curve defining a simple relation between  frequency and wave vector.  
@@ -458,11 +457,11 @@ Assuming the permittivity $\epsrn(\omega,\kk)$ or permeability $\murn(\omega,\kk
 \epsrn(\omega,\kk) = 1 + \chi_e(\omega) + \ii \gamma_{\text{e}}(\omega) \kk + [\alpha_{\text{e}}(\omega) \kk] \kk + \ldots, \medskip  \\
 \murn(\omega,\kk) = 1 + \chi_m(\omega) + \ii \gamma_{\text{m}}(\omega) \kk + [\alpha_{\text{m}}(\omega) \kk] \kk + \ldots, 
 \end{array} \quad \right\} \quad \text{(in any media)}
-\label{eq_epsmusd1}\end{equation} %% TODO gamma->eta, alpha->phi, ...->psi, ...-xi
+\label{eq_epsmusd1}\end{equation} %% maybe change gamma->eta, alpha->phi, ...->psi, ...-xi ? 
 where $\chi_{e,m}(\omega)$ are second rank tensors, $\gamma_{e,m}(\omega)$ third rank tensor, $\alpha_{e,m}(\omega)$ fourth rank, and similarly for possible higher orders of expansion. After the corresponding number of matrix multiplication with $\kk$, they all yield rank-2 tensors that add up to form the tensor of permittivity or permeability.
 %In this customary symmetric approximation of local media, both the electric permittivity and permeability in Eq. (\ref{eq_eps_loc}) are composed of two terms, one caused by the immediate response of vacuum, and another by the response of matter. In nonlocal media, both functions depend on the wavevector $\kk$, making the solution of Maxwell equations more complicated.
 
-Note the response function for a local medium can be formally derived from its nonlocal formulation by replacing the spatial dependence in Eq. (\ref{eq_chi_convol_nonloc}) by a Dirac delta function as follows: %% TODO fix the sencence - it is in fact incorrect
+Note the response function for a local medium can be formally derived from its nonlocal formulation by replacing the spatial dependence in Eq. (\ref{eq_chi_convol_nonloc}) by a Dirac delta function as follows: %% is the sencence correct?
 \begin{equation} \chi_e(t-\tau, \rr-\brho) \rightarrow \delta^{3}(\rr-\brho) \; \chi_e(t-\tau), \label{eq_loc_chi}\end{equation}
 which allows to simplify Eq. (\ref{eq_chi_convol_nonloc}) so that in local media only the temporal convolution has to be computed. Then the higher order terms including $\gamma_{e,m}$ and $\alpha_{e,m}$ in Eqs. (\ref{eq_epsmusd1}) vanish and
 \begin{equation} 
@@ -484,10 +483,9 @@ Therefore, the \textit{Landau-Lifshitz} model developed below is also denoted as
 
 %}}}
 \paragraph{Local medium in the Landau-Lifshitz model} %{{{
-%For simplicity we assume %% ... or "start with" TODO extend also to nonlocal ones
-%the medium is local, and described by $\epsrl(\omega)$ and $\murl(\omega)$.
-%As a verification that the constitutive equations were transformed correctly into the Landau-Lifshitz model, we show the correspondence
-An important step towards using the Landau-Lifshitz model is to explicitly derive how a classical, local medium with the magnetic response is represented. From the principle of correspondence, all local media should be compatible with this model, and it should predict exactly the same dispersion curves. In the Landau-Lifshitz model, the new spatial-dispersive permittivity $\epsLL(\omega, \kk)$ consists of
+An important step towards using the Landau-Lifshitz model is to explicitly derive how a classical, local medium with the magnetic response is represented. From the principle of correspondence, all local media can be expressed with this model without any change in the dispersion curves predicted. 
+
+In the Landau-Lifshitz model, the new spatial-dispersive permittivity $\epsLL(\omega, \kk)$ consists of
 \begin{enumerate}
  \item{the component caused by the local electric response of matter,} 
  \item{a new component fully accounting for the local \textit{magnetic} response of matter, thanks to a particular shape of its spatial dispersion.}
@@ -503,9 +501,9 @@ then Eq. (\ref{eq_me4}) maintains exactly the same form with the new fields, for
 \begin{equation} \nabla \times \HHsd = \nabla \times \HH + \left(\nabla\times \frac{\partial\mathbf{X}}{\partial t}\right) = \frac{\partial \D}{\partial t}+ \frac{\partial(\nabla\times \mathbf{X})}{\partial t} =  \frac{\partial \Dsd} {\partial t}, \label{eq_me4sd} \end{equation}
 because for reasonably shaped functions the temporal and spatial derivatives commute.
 
-%% TODO how this transform is denoted?
-With the freedom of choice of $\mathbf{X}$, we impose the above mentioned requirement that whole magnetic response of the matter is expressed by the constitutive equation for permittivity. Therefore in spatial-dispersive theory, the constitutive equation %% TODO reference some text from above pargraphs
-for magnetic induction is defined the same as in vacuum:
+%% todo how this transform is denoted?
+With the freedom of choice of $\mathbf{X}$, we impose the above mentioned requirement that whole magnetic response of the matter is expressed by the constitutive equation for permittivity. Therefore in spatial-dispersive theory, the constitutive equation 
+for magnetic induction is defined the same as in vacuum, c.f. Eq. \ref{eq_ce}:
 \begin{equation} \mu_0 \HHsd := \mu_0 \murl(\omega) \HH = \B. \label{eq_mu_sd}\end{equation}
 When this equation is rearranged into the form similar to \ref{eq_HHsd}, we obtain a prescription for the sought $\mathbf{X}$: 
 $$ \HHsd = \HH + (\murl(\omega) -1)\HH = \HH + \underbrace{\left(\frac{\murl(\omega)-1}{\mu_0\murl(\omega)}\right)\B}_{=:\,\partial\mathbf{X}/\partial t}$$
@@ -543,8 +541,8 @@ where
 Let us note that the classical approach using symmetric parameters $\epsrl(\omega,\kk),\murl(\omega,\kk)$, and the Landau-Lifshitz approach of gathering all medium-related effects in the permittivity $\epsLL(\omega,\kk)$ are only two examples of all possible transformations of medium parameters that keep the Maxwell equations unchanged. 
 
 Formally, it is possible to arbitrarily distribute the medium electric and magnetic responses between these parameters. The distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with custom spectral shape \cite{skaar2014diamagnetism}.
-% todo "Casimir" formulation of electrodynamics \cite{vinogradov2002form}
-%% TODO REF EBD theory and nonlocal electrodynamics %% \cite{krowne2007book_agran} %% \cite{landau1984electrodynamics} %% \cite{mikki2009electromagnetic}
+% maybe "Casimir" formulation of electrodynamics \cite{vinogradov2002form}
+% TODO REF EBD theory and nonlocal electrodynamics %% \cite{krowne2007book_agran} %% \cite{landau1984electrodynamics} %% \cite{mikki2009electromagnetic}
 %}}}
 
 \subsection{Dispersion relations in homogeneous nonlocal media} 
@@ -676,18 +674,6 @@ The negative refraction in media shown in Figs. \ref{fg_ifcnr}b,c and \ref{fg_if
 
 phase velocity is often higher than the speed of light, this is no problem\\
 
-%}}}
-\paragraph{"Negative-refraction", "negative-index", "left-handed" or "doubly-negative" media?}  %{{{
-Media with a negative index of refraction are a subset of negative refraction, where the notion of index of refraction makes sense, as discussed above.
-
-\add{When the index of refraction $N = \sqrt{\epsrl\murl}$ and the impedance $Z = \sqrt{\frac{\murl}{\epsrl}}$ are both defined, one may easily deduce that 
-\begin{equation} \epsrl = \pm\frac{N}{Z}, \quad \murl = \pm N\,Z. \label{eq_nzepsmu}\end{equation}
-The question of indefinite sign can be decided using the assumption of medium \textit{passivity}, that is, of the medium absorbing the wave rather than amplifying it. \todo{describe further}
-
-\todo{ (here first cite Veselago, not earlier, not later, note that Veselago68 speaks about a truly *homogeneous* medium)\\ }
-
-\todo{add the comments from http://www.wave-scattering.com/negative.html}
-}
 %}}}
 \paragraph{Sign of the group and energy velocities}  % TODO %{{{
 %  \mdf{
@@ -1273,6 +1259,18 @@ ref Homogenisation issues - response to our paper from OpEx
 %% The tunable negative permittivity and negative permeability of percolative Fe/Al2O3 composites in radio frequency range with
 %% Negative index may arise from resonances
 
+%}}}
+\paragraph{"Negative-refraction", "negative-index", "left-handed" or "doubly-negative" media?}  %{{{
+Media with a negative index of refraction are a subset of negative refraction, where the notion of index of refraction makes sense, as discussed above.
+
+\add{When the index of refraction $N = \sqrt{\epsrl\murl}$ and the impedance $Z = \sqrt{\frac{\murl}{\epsrl}}$ are both defined, one may easily deduce that 
+\begin{equation} \epsrl = \pm\frac{N}{Z}, \quad \murl = \pm N\,Z. \label{eq_nzepsmu}\end{equation}
+The question of indefinite sign can be decided using the assumption of medium \textit{passivity}, that is, of the medium absorbing the wave rather than amplifying it. \todo{describe further}
+
+\todo{ (here first cite Veselago, not earlier, not later, note that Veselago68 speaks about a truly *homogeneous* medium)\\ }
+
+\todo{add the comments from http://www.wave-scattering.com/negative.html}
+}
 %}}}
 
 %% finish this? or leave this out?
