--- a/theory.tex
+++ b/theory.tex
@@ -619,7 +619,7 @@ The choices of positive amplitude (Fig. \ref{fg_dcll_nl}a) and a negative one (F
 
 %}}}
 \paragraph{Multiple waves and additional boundary conditions}   %{{{ 
-For both cases shown in Fig. \ref{fg_dcll_nl}, it is obvious the dispersion equations can allow multiple solutions with different wavenumber $k$ at one frequency $\omega$, even when the waves have the same orientation and polarisation. (Note that, conversely, multiple solutions with different $\omega$ for a given wavevector $\kk$ are commonly present, as a usual consequence of frequency dispersion even in local media.)
+For both cases shown in Fig. \ref{fg_dcll_nl}, it follows that the dispersion equations can allow multiple solutions with different wavenumber $k$ at one frequency $\omega$, even when the waves have the same orientation and polarisation. (Note that, conversely, multiple solutions with different $\omega$ for a given wavevector $\kk$ are commonly present, as a usual consequence of frequency dispersion even in local media.)
 
 The waves propagating with the higher wavenumber $k$ are denoted as \textit{additional} waves, were predicted by the works of Pekar and others
 %\cite{agranovich2006spatial, agranovich2004linear, krowne2007book, agranovich1962crystal}
@@ -707,10 +707,10 @@ which is also known as \textit{anomalous dispersion}.
 It follows from this that the group velocity $\vg$ can also point opposite to the Poynting vector that represents propagation of the light beam energy, $\mathbf{S}$. 
 % This fact can not be easily deduced from the dispersion curves or IFCs. %% TODO  Or can it?
 This behaviour can be observed in narrow parts of the spectrum only, around the resonance frequencies where the media have high losses, and also a strong group velocity dispersion.
-Assuming passivity and absence of sources in the second medium, it is obviously the Poynting vector that has to maintain its perpendicular component and that the group velocity   inevitablyhas to point towards the interface also in the second medium, which seems contradictory to causality.
+Assuming passivity and absence of sources in the second medium, it is obviously the Poynting vector that has to maintain its perpendicular component and that the group velocity has inevitably to point towards the interface also in the second medium, which seems contradictory to causality.
 This result 
 %of the light envelope propagating with the group velocity \textit{from} the second medium \textit{towards} the interface may seem unphysical, 
-may however be explained through strong deformation of the envelope shape on a short distance, which ensures the information carried by the wave modulation to propagate causally, out from the source, and always with speed lower or equal to the speed of light in vacuum, $c$.
+may however be explained through strong deformation of the envelope shape on a short distance, which ensures the information carried by the wave modulation to propagate causally, out from the source, and always with speed lower or equal to the speed of light in vacuum $c$.
 
 Negative group velocity has been experimentally observed in a thin sample. It manifested as a negative shift of the light envelope compared to the absence of the medium \cite{dolling2006simultaneous}. Note that the negative group velocity is independent of the sign of the phase velocity, which may be both positive and negative \cite{mikki2009electromagnetic}.
 
@@ -719,7 +719,7 @@ Negative group velocity has been experimentally observed in a thin sample. It ma
 The notion of \textit{signal} or \textit{information propagation velocity} is sometimes % TODO cite
 identified with the group velocity, $\vg$. However, this may be misleading, as the differential definition of the group velocity in Eq. (\ref{eq_vg}) enables one to define it for slow-enough modulation only, so that the span of frequencies is narrow and the second derivative, corresponding to the group velocity dispersion, can be neglected.
 
-Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), one leaves the comfortable approximation of narrow spectrum: from the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a finite support has to span over an infinite spectrum. The proof \cite{hill2013uncertainty} can be drawn along the line of that under multiplication by some finite-supported binary functions, e.g., 
+Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), one leaves the comfortable approximation of narrow spectrum: from the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a compact support has to span over an infinite spectrum. The proof \cite{hill2013uncertainty} can be drawn along the line of that under multiplication by some compact-supported binary functions, e.g., 
 $$ f(t) \rightarrow f(t) \cdot \mathrm{sign}^2[f(t)], $$
 the original function does not change.
 
@@ -1025,8 +1025,9 @@ Periodic structures can similarly exhibit a resonance confined in the unit cell.
 Another important characteristic of individual resonances is that when the frequency is changed between the lower and upper edge of the band-gap, some internal change of the response happens. This is true for natural media as well as for lattices of individual resonators. Typically, at the lower band-gap edge, the dipoles are \textit{in-phase} with the wave, whereas at the upper edge, they are \textit{in counter-phase}.  % TODO note also that these indiv resonances are typical by a resonance shape in the permitivity
 Inside the bandgap, usually closer to the lower frequency edge, a resonance frequency is located (c.f. Fig. \ref{fg_oscillator_spectrum}).
 
-Yet another characteristic is that the resonant interaction of a particle with the wave can be approximated as a point dipole or multipole. As is dictated by the symmetry of the resonant field in the particle, the dipole may be either electric or magnetic. Usually, a particle has multiple resonances of electric or magnetic type at different frequencies. In particles of lower symmetry, one resonant mode may interact both ways simultaneously; this leads to optical activity. 
-Other resonances have no dipole, again due to the symmetry. Their interaction with the field is mediated by the electric or magnetic quadrupole moment (or even higher multipole \cite{merlin2009metamaterials}) and is usually weak, however it grows with the wavenumber $k$. Such multipole moments often complement dipole resonances, and are responsible for spatial dispersion, see Chapter \ref{chap_sd}. %% TODO this should be moved elsewhere...
+Yet another characteristic is that the resonant interaction of a particle with the wave can be approximated as a point dipole or multipole. As is dictated by the symmetry of the resonant field in the particle, the dipole moment may be electric, magnetic, zero or both simultaneously. A particle has multiple resonances at different frequencies, each of them having usually either an electric or a magnetic dipole. In particles of lower symmetry, one resonant mode may have both nonzero dipole moments simultaneously; this leads to optical activity. 
+
+Other resonances have both dipole moments zero, which in general results from higher rotational symmetry of the fields. Their interaction with the electromagnetic wave is mediated by the electric or magnetic \textit{quadrupole moment} (or even higher \textit{multipole} \cite{merlin2009metamaterials}). This interaction is usually weak, however it grows with the wavenumber $k$. Such multipole moments often complement dipole resonances, and are responsible for spatial dispersion, see Chapter \ref{chap_sd}. %% TODO this should be moved elsewhere...
 %% TODO how much should be "predicted" here, and nhow much should be left for the Results section?
 
 %}}}
@@ -1037,9 +1038,9 @@ In the above mentioned periodic lattice of isolated particles, the Bragg band-ga
 Along an axis of a cubic lattice, with unit cell size $a$, the rule for the Bragg band-gaps to be observed is particularly simple:
 \begin{equation} K= \frac{\pi m}{a}, m\in\mathbb{N}. \label{eq_braggbg}\end{equation}
 Thus, the first Bragg band-gap is observed in a periodic structure when the wavenumber $K$ reaches the $\mathbf X$, $\mathbf Y$ or $\mathbf Z$ points of the Brillouin zone.
-Intuitively it might appear that the requirement of exact equality in the expression (\ref{eq_braggbg}) should cause the Bragg band-gap to have zero width, but in fact the dispersion curves are bent in such a way that the band-gap covers a range of frequencies as in Figs. \ref{phdfolding}a and \ref{phdfolding}d.
+Intuitively it might appear that the requirement of exact equality in the expression (\ref{eq_braggbg}) should cause the Bragg band-gap to have zero width, but in fact the dispersion curves are bent in such a way that the band-gap covers a range of frequencies as in Figs. \ref{fg_phcfolding}a and \ref{fg_phcfolding}d.
 
-The width of the band-gap depends on the scattering strength of the particles. The width can be analytically computed for a one-dimensional layered system \cite{laktionov2008} described by the transfer-matrix formalism. In the Results section, it is also shown that for a particular choice of parameters the width of the Bragg band-gap can vanish. 
+The width of the band-gap depends on the scattering strength of the particles; it can be analytically computed for a one-dimensional layered system \cite{laktionov2008} described by the transfer-matrix formalism. In the Results section, it is also shown that for a particular choice of parameters the width of the Bragg band-gap can vanish. 
 % -> zero-width case (it is a transition between a mode traversing from one photonic band to another --- TODO put into Results)
 
 In analogy with the solid-state physics, where the notion of band-gaps originates from, the Bragg band-gaps can be viewed as the \textit{direct} ones, as the dispersion curves at the lower and upper band-gap edges are at the same wavenumber $K$. In contrast, the individual resonances are analogous to the \textit{indirect} band-gaps, as the internal resonances also cause the 
@@ -1048,16 +1049,10 @@ This difference arises from the fact that the behaviour of the structure does no
 % -> exponential wave decay with phase difference across the cell
 
 %}}}
-\paragraph{Other types of band-gaps}%{{{
-In the literature,  % XXX
-zero-average-index band gaps?
-
-%}}}
-\paragraph{Overview of band-gap mechanisms}%{{{
-% individual band-gaps -- indirect bands,  Bragg band-gaps -- direct bands, 
-% individual band-gaps in periodic structures are always affected by the half-wave resonating bteween the cells
-
-%}}}
+%% TODO \paragraph{Other types of band-gaps}%{{{
+%% In the literature, also other types of band-gaps were identified.  zero-average-index band gaps?
+%% 
+%% %}}}
 
 \section{Metamaterials and photonic crystals}
 \subsection{Historical notes} 
@@ -1076,6 +1071,35 @@ zero-average-index band gaps?
 
 of designing and investigating periodic structures
 % == History ==    artificial dielectrics, which were already designed in the 1940s for microwave frequencies -- J. Brown, “Artificial dielectrics,” Prog. Dielectr. 2, 193–225 (1960)
+
+\subsection{Application of photonic crystals} 
+\paragraph{One-dimensional structures}%{{{
+\add{
+It was first studied by Lord Rayleigh in 1887 \cite{johnson2003introduction} in a laminar crystal composed of thin periodic layers of slightly different properties. The field at the lower  whenever there are two different solutions at the same wavevector. % They are typical by 
+At the band boundaries where $K=m\pi/a, m\in \mathbb Z$, all cells have the same field shape (except possibly for the sign), and correspondingly nodal planes/surfaces can be identified in the unit cell and 
+Photonic band-gaps are fundamentally different the band gaps arising from the individual resonances, and arae characteristic by not reducing the number of nodal planes 
+%  \cite{johnson2003introduction}
+%  Electromagnetic wave propagation in periodic media was first studied by Lord Rayleigh in 1887, in connection with the peculiar reflective properties of a
+%  crystalline mineral with periodic “twinning” planes (across which the dielectric tensor undergoes a mirror flip). These correspond to one-dimensional photonic
+%  crystals, and he identified the fact that they have a narrow band gap prohibiting light propagation through the planes. This band gap is angle-dependent
+
+application of PBG
+}
+
+%}}}
+\paragraph{Planar photonic band-gap structures}%{{{
+\textit{Photonic-crystal waveguides in integrated optics}
+% Beam propagation in periodic planar waveguides \cite{zengerle1987light}
+
+%}}}
+\paragraph{Photonic filters}%{{{
+
+%}}}
+\paragraph{High field concentration}
+Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
+
+%}}}
+% -> PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
 \subsection{Application of metamaterials} 
 \paragraph{Negative and unusual values of effective parameters}%{{{
@@ -1143,38 +1167,6 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 
 %}}}
 
-\subsection{Application of photonic crystals} 
-\paragraph{One-dimensional structures}%{{{
-\add{
-It was first studied by Lord Rayleigh in 1887 \cite{johnson2003introduction} in a laminar crystal composed of thin periodic layers of slightly different properties. The field at the lower  whenever there are two different solutions at the same wavevector. % They are typical by 
-At the band boundaries where $K=m\pi/a, m\in \mathbb Z$, all cells have the same field shape (except possibly for the sign), and correspondingly nodal planes/surfaces can be identified in the unit cell and 
-Photonic band-gaps are fundamentally different the band gaps arising from the individual resonances, and arae characteristic by not reducing the number of nodal planes 
-%  \cite{johnson2003introduction}
-%  Electromagnetic wave propagation in periodic media was first studied by Lord Rayleigh in 1887, in connection with the peculiar reflective properties of a
-%  crystalline mineral with periodic “twinning” planes (across which the dielectric tensor undergoes a mirror flip). These correspond to one-dimensional photonic
-%  crystals, and he identified the fact that they have a narrow band gap prohibiting light propagation through the planes. This band gap is angle-dependent
-
-application of PBG
-}
-
-%}}}
-\paragraph{Planar photonic band-gap structures}%{{{
-\textit{Photonic-crystal waveguides in integrated optics}
-
-%}}}
-\paragraph{Photonic filters}%{{{
-
-%}}}
-\paragraph{High field concentration}
-Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
-
-%}}}
-\paragraph{Planar photonic structures}
-Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
-
-% Beam propagation in periodic planar waveguides \cite{zengerle1987light}
-%}}}
-% -> PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
 \subsection{The boundary between metamaterials and photonic crystals} 
 \paragraph{Difference in the Bloch wavelength}%{{{
