--- a/appendices.tex
+++ b/appendices.tex
@@ -29,21 +29,24 @@ the resulting Fabry-Pérot resonances result in the typical Fresnel-Airy functio
  \toprule
 Abbreviation & Meaning	\\
  \hline
-EDB			& (Formulation of Maxwell equations using the $\E$, $\D$ and $\B$ vectors)\\
+EDB		& (Formulation of Maxwell equations using the $\E$, $\D$ and $\B$ vectors)\\
 FDTD 		& Finite-difference time-domain (numerical simulation)\\
 FDFD 		& Finite-difference frequency-domain (numerical simulation)\\
 FEM 		& Finite-element method (numerical simulation)\\
 FFT 		& Fast Fourier transform (algorithm)\\
 FRoI 		& Frequency range of interest\\
 FDM 		& Filter diagonalisation method (algorithm)\\
-IFC			& Isofrequency contours\\
-MM			& Metamaterial\\
+GVD 		& Group velocity dispersion \\
+IFC		& Isofrequency contours\\
+MM		& Metamaterial\\
 NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
-PBG			& Photonic band-gap\\
+NGV 		& Negative group velocity\\
+PBG		& Photonic band-gap\\
 PhC 		& Photonic crystal\\
 PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (numerical simulation)\\
-STO			& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
+STO		& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
+SRR		& Split-ring resonator\\
 TDTS 		& Time-domain terahertz spectroscopy\\
  \bottomrule
  \end{tabular} \end{table}
