--- a/t.tex
+++ b/t.tex
@@ -26,12 +26,11 @@
 
 \usepackage{xcolor}
 %\usepackage[notref,notcite]{showkeys}
-\usepackage[color]{showkeys}
-%\definecolor{refkey}{blue}
-\definecolor{refkey}{rgb}{1.0, 0.0, 0.0}
-\definecolor{labelkey}{rgb}{1.0, 0.0, .40}
+% \usepackage[color]{showkeys}
+% \definecolor{refkey}{rgb}{1.0, 0.0, 0.0}
+% \definecolor{labelkey}{rgb}{1.0, 0.0, .40}
 %\definecolor{labelkey}{blue}
-\renewcommand*{\showkeyslabelformat}[1]{\hspace{-9mm}\vbox{\hsize=1.1cm\normalfont\tiny#1}}
+%\renewcommand*{\showkeyslabelformat}[1]{\hspace{-9mm}\vbox{\hsize=1.1cm\normalfont\tiny#1}}
 
 
 \begin{document}
@@ -51,13 +50,13 @@
 \input{expe.tex}
 
 \chapter{Results}
-\input{result.tex}
+% \input{result.tex}
 
 \chapter{Conclusion}
-\input{conclusion.tex}
+% \input{conclusion.tex}
 
 \chapter{Appendices}
-\input{appendices.tex}
+ \input{appendices.tex}
 
 
 \label{endtext} 
