--- a/theory.tex
+++ b/theory.tex
@@ -1055,8 +1055,6 @@ term first used in
 90's in designing and investigating periodic structures
 
 %% Definitions:
-% -> superlens (aside from losses and aberration, in a hypothetical case that the MM structure can be made much finer than a detector ...)
-% Losses are in \cite[p. 708]{born1999book}
 % phc, mm, "electromagnetic materials"
 
 % == History ==    artificial dielectrics, which were already designed in the 1940s for microwave frequencies -- J. Brown, “Artificial dielectrics,” Prog. Dielectr. 2, 193–225 (1960)
@@ -1114,7 +1112,7 @@ region, or were barely working experimental devices, often requiring .
 
 The question remains whether the significant progress of technology required to fabricate suitable deeply sub-wavelength structures does not simultaneously allow much better imaging with detectors placed in the near-field.
 %}}}
-\paragraph{Imaging beyond the diffraction limit }%{{{
+\paragraph{Superlens, hyperlens and sub-diffraction imaging}%{{{
 - 
 
 \mdf{
@@ -1123,7 +1121,9 @@ The question remains whether the significant progress of technology required to 
 hyperbolic media, analogy with optical fibers, graphene nanostructures...
 }
 
-To achieve the desired high resolution, the medium has to maintain  \todo{+}
+%% add about microscope limitation by num-aperture 
+To achieve the desired high resolution
+for imaging beyond the diffraction limit , the medium has to maintain  \todo{+}
 
 If a metamaterial is used as the medium, this obviously translates into the unit cells being \textit{finer} than the finest details to be imaged. The requirement is in fact much stricter, as also the spatial dispersion has to be negligible for the waves the desired resolution, which could be achieved either with sophisticated engineering of the dispersion, or with massive reduction of the unit cell size, so that all wave vectors are near the center of Brillouin zone. % refer to some Fig. of the PHC BZ
 
@@ -1133,6 +1133,9 @@ To the author's knowledge, all demonstrations of metamaterial sub-wavelength ima
 region, or were barely working experimental devices, often requiring .
 
 The question remains whether the significant progress of technology required to fabricate suitable deeply sub-wavelength structures does not simultaneously allow much better imaging with detectors placed in the near-field.
+
+% -> superlens (aside from losses and aberration, in a hypothetical case that the MM structure can be made much finer than a detector ...)
+% Losses are in \cite[p. 708]{born1999book}
 %}}}
 \paragraph{Electromagnetic cloaking}%{{{
 
