--- a/intro.tex
+++ b/intro.tex
@@ -1,33 +1,36 @@
-\section{Introduction} % TODO
+\section{Electromagnetism of periodic structures} %{{{
+The peculiar behaviour of electromagnetic waves in periodic structures has attracted human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies or peacocks. 
 
-\subsection{Electromagnetism of complex structures} %{{{
-The peculiar behaviour of electromagnetic waves in periodic media has attracted the human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} that is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies or peacocks. 
+The scientific community started to study the underlying phenomena in the late 19th century when the X-ray scattering was observed on crystal lattices (W. H. and W. L. Bragg, \todo{19xx}) and when the high optical reflection from periodic layers of entirely transparent materials was predicted (Lord Rayleigh, 1870s). Note that not all related research was focused on electromagnetism -- for example, the Bloch theorem, discussed later in this thesis, was originally developed for the electron waves in solids (F. Bloch, \todo{19xx}).
 
-The scientific community started to study the underlying phenomena in the late 19th century when the X-ray scattering was observed on (periodic) crystal lattices and when the high optical reflection from periodic layers of entirely transparent materials was predicted. % TODO ref
-%The technological and scientific boom of the 20th century contributed with many new theoretical approaches, numerical methods and types of periodic structures to the newly born field of \textit{photonics}. With the advent of the 21th century, great progress was also made in the research of \textit{metamaterials}, a specific subset of periodic structures which will be discussed in greater detail in this work. 
-% TODO motivation - finish
-The key concept in photonic crystal or metamaterial studies is that the electromagnetic properties are defined predominantly by the shape of the structure, while the actual materials that are used to build such a structure can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
-While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, by periodic structuring of ordinary materials, several new phenomena can be obtained. The rapid development of this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers able to predict the structure behaviour.
+Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term \textit{photonics} was coined \todo{in the 19xxs} for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a practically irreplaceable role in the high-bandwidth telecommunication, science and industry.
 
-\subsection{Motivation for the terahertz photonics}
-This work focuses on the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz, neighbouring with the microwave and the far-infrared spectral ranges. While the electrodynamic theory presented in this work is scale-invariant and can be used from microwave to optical frequencies, the selected frequency range defined the properties of materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high-permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of the structures. On the other hand, some materials commonly found in the microwave or optical applications must be avoided, as they exhibit excessively high losses in the terahertz range (such as glass, water, most plastics etc.)
+Out of all structures studied, arguably the largest theoretical attention was attracted to structures that are periodic.
+Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously. One paradigm of \textit{photonic crystals} was inspired by the electron waves in crystals; slightly later the paradigm of \textit{metamaterials} was inspired by the electromagnetic waves in homogeneous materials. 
 
-The THz range is located in the spectrum at the boundary between the regions where people use "electronic" or "optical" approaches \cite{ozyuzer2007emission}. At THz frequencies, concepts from both paradigms are often seamlessly used together: waves from waveguides can be collimated by lenses, pulses emitted from lumped antenna emitters are detected by electrooptical crystals etc. 
+The key concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but are defined predominantly by \textit{shape} in space. The actual constituent materials can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
+While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials. 
+
+\section{Motivation for the terahertz photonics}
+This work focuses on periodic structures operating in the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used in the whole electromagnetic spectrum, the selected frequency range defines the properties of constituent materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high-permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of the structures. On the other hand, materials such as glass, most plastics etc. commonly used in other spectral ranges must be avoided, since they exhibit excessively high losses in the terahertz range.
+
+The THz range is located in the spectrum at the boundary between the microwave region where most often the paradigm of high-frequency electronics is used, and the infrared and optical region where classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, concepts from both paradigms are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc. 
 %% ... gap in the generation of electromagnetic radiation, extending ap- proximately from 0.5 THz to 2 THz, stems from the separation of the two general
 %%paradigms for generating electromagnetic waves (1–3): alternating currents in semiconductor- based electronics and electronic transitions be- tween quantized electronic states in lasers,
 %%respectively. The frequency of semiconductor devices is bounded from above by limits of the electron velocities, whereas the frequency of solid-
 %%state lasers is bounded from below by thermal energies that limit the smallest electronic transitions useful for lasing...
-Yet none of these approaches is optimal for the THz applications; from the electronic point of view, we are for instance still lacking transistors with fast enough response and the microstrip circuits become too lossy at high frequencies. The optical approach is often complicated by the strong wave-optics phenomena such as diffraction, while some light-matter interactions are weaker, limiting the possibilities for e.g. amplitude modulation by Pockels effect. These deficiencies provide additional reasons to search for the new possibilities of the photonic crystals and metamaterials operating in the terahertz range.
 
-% TODO THz MM review 
+Yet none of these approaches is optimal for the THz applications; from the electronic point of view, there is still demand for fast-enough diodes and power transistors and the microstrip circuits become too lossy at high frequencies. The optical approach is often burdened by the strong wave-optics phenomena such as diffraction, and moreover some light-matter interactions are weaker than at the optical frequencies, limiting the possibilities for e.g. amplitude modulation by Pockels effect. 
+
+These deficiencies provide additional reasons to search for the new possibilities opened by photonic devices and periodic structures operating in the terahertz range.  
 
 %}}}
-\subsection{Outline of the thesis} %{{{
+\section{Outline of the thesis} %{{{
 % TODO  cíle disertace
 \add{
-Many different designs of metamaterials  % and photonic crystals
+Many different designs of metamaterials and photonic crystals
 were proposed in the last decades, part of them being aimed at the terahertz range. %They have been also summed by several books and reviews % TODO refs x5
-One of the aims of the dissertation is to give a comparison of these structures and to point out the profound similarities in their operation, which may not be obvious.  Some of the structures discussed were also manufactured and experimentally characterized during this PhD project. 
+One of the aims of the dissertation is to give a comparison of these structures and to point out the profound similarities in their operation, which may not be obvious .  Some of the structures discussed were also manufactured and experimentally characterized during this PhD project. 
 Some attention was paid also to \todo{investigate the tunability of their properties depending on external parameters}, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
 Last but not least, the dissertation involved the development of a reliable platform for numerical simulations of photonic structures, based on freely available code. The results from these simulations will be verified against experimental data and analytic models.
 \\
@@ -75,7 +78,7 @@ The distinction of two widely recognized types of these, namely \textit{metamate
 %In the last section, some general conclusions and prospects are drawn.
 
 %}}}
-\subsection{The conventions used}%{{{
+\section{The conventions used}%{{{
 Thorough the thesis, we use a single or double apostrophe ($x', x''$) to refer to the real and imaginary part of a complex numberl ($x$). Italic symbols (e.g. $k$) represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $k = |\kk|$). Components of vectors are denoted by small indices, such as $k_x, k_y, k_z$.
 
 The explicit time, space or frequency dependence of quantities are omitted when it does not allow confusion. So for electric field we write $\E$ instead of $\E(\rr,t)$.
